--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "animate.css": "^4.1.1",
         "antd": "^5.8.6",
         "apexcharts": "^3.52.0",
+        "date-fns": "^3.3.1",
         "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
         "class-variance-authority": "^0.7.0",
