--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "@mui/material": "^5.9.0",
         "@mui/styled-engine": "^5.9.0",
         "@mui/system": "^5.9.0",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-select": "^2.1.1",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tooltip": "^1.1.2",
         "@syncfusion/ej2-base": "27.1.53",
         "@syncfusion/ej2-buttons": "27.1.53",
         "@syncfusion/ej2-calendars": "27.1.52",
@@ -32,11 +37,6 @@
         "@syncfusion/ej2-react-splitbuttons": "27.1.50",
         "@syncfusion/ej2-schedule": "27.1.53",
         "@syncfusion/ej2-splitbuttons": "27.1.50",
-        "@radix-ui/react-icons": "^1.3.0",
-        "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-select": "^2.1.1",
-        "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-tooltip": "^1.1.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
@@ -45,11 +45,11 @@
         "animate.css": "^4.1.1",
         "antd": "^5.8.6",
         "apexcharts": "^3.52.0",
-        "date-fns": "^3.3.1",
         "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "date-fns": "^3.3.1",
         "dayjs": "^1.11.9",
         "echarts": "^5.4.3",
         "echarts-for-react": "^3.0.2",
@@ -57,6 +57,7 @@
         "lucide-react": "^0.416.0",
         "moment": "^2.29.3",
         "multiselect-react-dropdown": "^2.0.25",
+        "papaparse": "^5.4.1",
         "pptxgenjs": "^3.11.0",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
@@ -113,6 +114,7 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@types/papaparse": "^5.3.15",
         "tailwindcss": "^3.4.7"
     }
 }
